force-app/main/default/objects/Long_Running_Report__c/Long_Running_Report__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Long Running Report</label>
</CustomObject>