force-app/main/default/objects/Long_Running_Report__c/fields/Long_Running_Report_Header__c.field-meta.xml
<CustomField>
    <fullName>Long_Running_Report_Header__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Long Running Report Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>