force-app/main/default/objects/Long_Running_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>