force-app/main/default/objects/Long_Running_Report__c/fields/SF_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Report_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SF Report Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>